<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arif.spinnerwithdatabase.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_name_label"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <EditText
            android:id="@+id/add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_add" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_subject_label"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_name_label"

        android:padding="15dp">

        <EditText
            android:id="@+id/add_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_add" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/add_topic_label"
        android:padding="15dp"
        android:text="Add Label" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_topic_label"
        android:layout_width="250dp"
        android:layout_below="@+id/add_subject_label"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <EditText
            android:id="@+id/add_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic_add" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/namecategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add"

        android:padding="15dp"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/namespinner"
        android:layout_below="@+id/namecategory"
        android:layout_width="160dp"
        android:layout_height="wrap_content"

        android:padding="15dp"
        android:prompt="@string/select_name" />

    <TextView
        android:id="@+id/subjectcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_add"
        android:layout_marginLeft="200dp"
        android:padding="15dp"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/subspinner"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/subjectcategory"
        android:layout_marginLeft="200dp"
        android:padding="15dp"
        android:prompt="@string/select_subject" />


</RelativeLayout>
